--- a/views/gallery.haml
+++ b/views/gallery.haml
@@ -1,13 +1,12 @@
 - @title = "Аренда манипулятора - фотогалерея"
 
-<h1>Фотогалерея</h1>
-
-<div class="fotogallery">
-  <a rel="prettyPhoto[pp_gal]" href="/assets/fullscreen/manipulyator/full_0048.jpg" title=""><img src="/assets/thumbnails/manipulyator/thumb_0048.jpg" width="200" alt="" /></a>
-  <!-- <a rel="prettyPhoto[pp_gal]" href="/assets/fullscreen/manipulyator/full_0046.jpg" title=""><img src="/assets/thumbnails/manipulyator/thumb_0046.jpg" width="200" alt="" /></a> -->
-
-  <a rel="prettyPhoto[pp_gal]" href="/assets/fullscreen/manipulyator/full_ermitazh1.jpg" title=""><img src="/assets/thumbnails/manipulyator/thumb_ermitazh1.jpg" width="200" alt="" /></a>
-  <!-- <a rel="prettyPhoto[pp_gal]" href="/assets/fullscreen/manipulyator/full_ermitazh2.jpg" title=""><img src="/assets/thumbnails/manipulyator/thumb_ermitazh2.jpg" width="200" alt="" /></a> -->
-  <a rel="prettyPhoto[pp_gal]" href="/assets/fullscreen/manipulyator/full_0077.jpg" title=""><img src="/assets/thumbnails/manipulyator/thumb_0077.jpg" width="200" alt="" /></a>
-
-</div>
+%h1 Фотогалерея
+.fotogallery
+  %a{:href => "/images/fullscreen/manipulyator/full_0048.jpg", :rel => "prettyPhoto[pp_gal]", :title => ""}
+    %img{:alt => "", :src => "/images/thumbnails/manipulyator/thumb_0048.jpg", :width => "200"}/
+  / <a rel="prettyPhoto[pp_gal]" href="/images/fullscreen/manipulyator/full_0046.jpg" title=""><img src="/images/thumbnails/manipulyator/thumb_0046.jpg" width="200" alt="" /></a>
+  %a{:href => "/images/fullscreen/manipulyator/full_ermitazh1.jpg", :rel => "prettyPhoto[pp_gal]", :title => ""}
+    %img{:alt => "", :src => "/images/thumbnails/manipulyator/thumb_ermitazh1.jpg", :width => "200"}/
+  / <a rel="prettyPhoto[pp_gal]" href="/images/fullscreen/manipulyator/full_ermitazh2.jpg" title=""><img src="/images/thumbnails/manipulyator/thumb_ermitazh2.jpg" width="200" alt="" /></a>
+  %a{:href => "/images/fullscreen/manipulyator/full_0077.jpg", :rel => "prettyPhoto[pp_gal]", :title => ""}
+    %img{:alt => "", :src => "/images/thumbnails/manipulyator/thumb_0077.jpg", :width => "200"}/
