--- a/views/layout.haml
+++ b/views/layout.haml
@@ -3,7 +3,10 @@
   %head
     %title= @title || "Аренда манипуляторов в Петербурге"
     %link{rel: 'stylesheet', href: 'styles.css'}
+    %link{rel: 'stylesheet', href: '/stylesheets/prettyPhoto.css'}
+
     %meta{name: 'description', content: @description || 'Аренда манипуляторов в Петербурге' }
+
     %meta{name: 'yandex-verification', content: '4f49972a43cf1b97' }
     %link{ :rel => "shortcut icon", :href => "/favicon.ico", :type => "image/x-icon"}
   %body
@@ -25,10 +28,10 @@
               %a{href: '/'} Главная
             %li
               %a{href: '/prices'} Цены
-            %li
-              %a{href: '/services'} Услуги
-            %li
-              %a{href: '/info'} Информация
+            / %li
+            /   %a{href: '/services'} Услуги
+            / %li
+            /   %a{href: '/info'} Информация
             %li
               %a{href: '/faq'} Вопрос ответ
             %li
@@ -52,9 +55,16 @@
             %p
               %a{href: '/contacts'} Контактная информация
           #counter
-            = haml :'shared/_li_metrika'
+            = erb :'shared/_li_metrika'
             %br
             #seovita
               %a{href: 'http://seovita.ru'} Создание и продвижение сайта: SEOVITA.ru', ''
 
 
+%script{src: "http://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js", type: 'text/javascript'}
+%script{type: 'text/javascript', src: '/javascripts/jquery.prettyPhoto.js'}
+
+:javascript
+  $(document).ready(function(){
+    $("a[rel^='prettyPhoto']").prettyPhoto();
+  });
