use rack:sass plugin, refactor

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -2,7 +2,7 @@
 %html
   %head
     %title= @title || "Аренда манипуляторов в Петербурге"
-    %link{rel: 'stylesheet', href: 'styles.css'}
+    %link{rel: 'stylesheet', href: '/stylesheets/styles.css'}
     %link{rel: 'stylesheet', href: '/stylesheets/prettyPhoto.css'}
 
     %meta{name: 'description', content: @description || 'Аренда манипуляторов в Петербурге' }
