--- a/views/shared/_form.haml
+++ b/views/shared/_form.haml
@@ -2,20 +2,20 @@
   #top_form
     .field
       %label{for: 'name'} Ваше ФИО*
-      %input{type: 'text', name: 'contact[name]', placeholder: 'Ваше имя', required: true}
+      %input{type: 'text', name: 'message[name]', placeholder: 'Ваше имя', required: true}
     .field
       %label{for: 'email'} Ваш email
-      %input{type: 'text', name: 'contact[email]', placeholder: 'ya@yandex.ru'}
+      %input{type: 'text', name: 'message[email]', placeholder: 'ya@yandex.ru'}
     .field
       %label{for: 'tel'} Ваш телефон*
-      %input{type: 'text', name: 'contact[tel]', placeholder: '89045883333', required: true}
+      %input{type: 'text', name: 'message[tel]', placeholder: '89045883333', required: true}
     .field
       %label{for: 'serv'} Услуга
-      %input{type: 'text', name: 'contact[serv]', placeholder: 'Перевозка'}
+      %input{type: 'text', name: 'message[serv]', placeholder: 'Перевозка'}
   #bottom_form
     .field
       %label{for: 'extra_info'} Ваше сообщение*
-      %textarea{name: 'contact[extra_info]', placeholder: 'Звонить с 9 до 21 вечера', required: true}
+      %textarea{name: 'message[extra_info]', placeholder: 'Звонить с 9 до 21 вечера', required: true}
     .form_button
       %input{type: 'submit', value: 'Отправить'}
 
