--- a/views/shared/_form.haml
+++ b/views/shared/_form.haml
@@ -14,7 +14,7 @@
       %input{type: 'text', name: 'message[serv]', placeholder: 'Перевозка'}
     .field
       %label{for: 'site'} Сайт*
-      %input{type: 'text', name: 'message[site]', placeholder: 'Перевозка'}
+      %input{type: 'hidden', name: 'message[site]', placeholder: 'Перевозка'}
   #bottom_form
     .field
       %label{for: 'extra_info'} Ваше сообщение*
