--- a/views/shared/_form.haml
+++ b/views/shared/_form.haml
@@ -13,7 +13,7 @@
       %label{for: 'serv'} Услуга
       %input{type: 'text', name: 'message[serv]', placeholder: 'Перевозка'}
     .field
-      %label{for: 'site'} Сайт*
+      %label{for: 'site', style: 'display: none;'} Сайт*
       %input{type: 'hidden', name: 'message[site]', placeholder: 'Перевозка'}
   #bottom_form
     .field
