--- a/views/contacts.haml
+++ b/views/contacts.haml
@@ -1,7 +1,13 @@
-%h1 РЕКВИЗИТЫ
-
+%h1 КОНТАКТЫ
 %br/
+%div Тел.: 8 (812) 921-06-70
+%div Тел.: 8 (911) 760-76-52
+%div
+  Email:
+  %a{ href: "mailto:kranbort@yandex.ru" }kranbort@yandex.ru
 
+%h1 РЕКВИЗИТЫ
+%br/
 %div Индивидуальный предприниматель Моисеев Алексей Анатольевич
 %divг. Санкт-Петербург, ул. Авиационная, д.40
 %div ОГРНИП 308784735700602
