--- a/views/index.haml
+++ b/views/index.haml
@@ -9,7 +9,7 @@
 
 %p
   %strong Кран манипулятор
-  – эффективное и экономичное транспортное средство, совмещающее в себе функции погрузчика, автокрана и перевозчика. С его помощью производится погрузка-разгрузка любых крупногабаритных грузов, а также оперативная доставка к месту назначения. Арендовать манипулятор (вездеход), длинный борт груgзоподъемностью до 14т.
+  – эффективное и экономичное транспортное средство, совмещающее в себе функции погрузчика, автокрана и перевозчика. С его помощью производится погрузка-разгрузка любых крупногабаритных грузов, а также оперативная доставка к месту назначения. Арендовать манипулятор (вездеход), длинный борт грузоподъемностью до 14т.
 
 %h2 Преимущество аренды манипулятора в СПб у нас
 
